# sedov-taylor-tails-seminar

./: analysis.py  pyproject.toml  references.bib  script.typ  slides.typ
data/: snr_independent_ages.csv
