[project]
name = "sedov-taylor-tails-seminar"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "astropy>=7.2.0",
    "astroquery>=0.4.11",
    "marimo>=0.19.11",
    "matplotlib>=3.10.8",
    "mcp>=1.26.0",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "polars>=1.38.1",
    "scipy>=1.15.0",
]

[dependency-groups]
dev = [
    "altair>=6.0.0",
    "openai>=2.21.0",
    "python-lsp-ruff>=2.3.0",
    "python-lsp-server>=1.14.0",
    "ruff>=0.15.1",
    "vegafusion>=2.0.3",
    "vl-convert-python>=1.9.0.post1",
    "websockets>=16.0",
]
